--- a/Backend/.env-example
+++ b/Backend/.env-example
@@ -4,14 +4,14 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Banco de Dados
-DB_NAME=your_db_name
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_HOST=localhost
-DB_PORT=5432
+PG_DBNAME=your_db_name
+PG_USER=your_db_user
+PG_PASSWORD=your_db_password
+PG_HOST=localhost
+PG_PORT=5432
 
 # Outras configs
 EMAIL_HOST=smtp.exemplo.com
 EMAIL_PORT=587
-EMAIL_HOST_USER=your-email@example.com
-EMAIL_HOST_PASSWORD=your-email-password
+EMAIL_USER=your-email@example.com
+EMAIL_PASSWORD=your-email-password
