--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -2,6 +2,9 @@ asgiref==3.8.1
 Django==5.2.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+django-cors-headers==4.7.0
+django-extensions==4.1
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-decouple==3.8
 python-dotenv==1.1.0
